added success stories of team

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -6,3 +6,51 @@
   position: relative
   top: 8px
   color: #000
+
+.nav > li > a 
+  padding: 10px 20px
+  font-size: 18px
+
+.header_white_space
+  height: 200px
+.language
+  display: inline-block
+.mobile
+  display: inline-block
+  width: 300px
+
+.email_register
+  .form-control
+    background-color: transparent    
+    width: 300px
+    color: #fff
+  .btn
+    width: 100px
+    background: #ff9900
+    border: none
+    color: #fff
+  .form-control, .btn  
+    height: 40px
+    border-radius: 0
+
+  label
+    font-weight: normal
+    color: #000
+
+.team
+  &_memeber
+    width: 300px  
+    position: relative
+  &_images
+    width: 300px
+    height: 300px
+    border-radius: 100%
+    background-position: center center
+    background-size: cover
+    margin: 0 auto
+  .mem1
+    background-image: url('1.jpg')
+  .mem2
+    background-image: url('2.jpg')
+  .mem3
+    background-image: url('3.jpg')
