--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -215,7 +215,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
   outline: 0;
-  color: #fed136;
+  color: #757575;
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -635,6 +635,7 @@ section h3.section-subheading {
 .team-member img {
   margin: 0 auto;
   border: 7px solid #fff;
+  width: 80%
 }
 
 .team-member h4 {
