--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,55 +1,74 @@
-<!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand page-scroll" href="#page-top">
-        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bome</span>
-      </a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="hidden">
-          <a href="#page-top"></a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#services">About</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#portfolio">Deck</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#about">Video</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#team">Staff</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
-</nav>
 
 <!-- Header -->
 <header>
+  <div class="header_white_space"></div>
   <div class="container">
-    <div class="intro-text">
-      <div class="intro-lead-in">Welcome To Our Studio!</div>
-      <div class="intro-heading">It's Nice To Meet You</div>
-      <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+    <div class="col-md-6">
+      <section class="text-right">
+        <div class="language">
+          <ul class="text-right list-unstyled">
+            <li>C++</li>
+            <li>java</li>
+            <li>pythan</li>
+            <li>ruby</li>
+            <li>php</li>
+            <li>mysql</li>
+            <li>c-sharp</li>
+            <li>c-objective</li>
+            <li>ajax</li>
+            <li>perl</li>
+            <li>javascript</li>
+          </ul>
+        </div>
+        <div class="mobile">
+          
+        </div>
+      </section>
+    </div>
+    <div class="col-md-6">
+      <section class="email_register text-left">
+        <form action="" class="form-inline">   
+          <label for="">Developer Register now for early access</label>       
+          <div class="form-group">            
+            <input type="text" class="form-control" placeholder="Enter your email address">
+            <button type="submit" class="btn btn-default">Submit</button>
+          </div>
+        </form>
+      </section>
     </div>
   </div>
 </header>
-
+    <!-- Team Section -->
+<section id="team" class="bg-light-gray">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Three Success Stories</h2>        
+      </div>
+    </div>
+    <div class="row team">
+      <div class="col-sm-4">
+        <div class="team_member text-center">
+          <div class="team_images mem1"></div>
+          <h4>Eric, USA</h4>
+          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                       
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team_member text-center">
+          <div class="team_images mem2"></div>                        
+          <h4>Eric, USA</h4>
+          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                       
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team_member text-center">
+          <div class="team_images mem3"></div>
+                               
+          <h4>Eric, USA</h4>
+          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                       
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
