--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
 
 <!-- Header -->
-<header>
-  <div class="header_white_space"></div>
+<header>  
   <div class="container">
-    <div class="col-md-6">
-      <section class="text-right">
+    <div class="col-md-7">
+      <section class="text-right header-element">
         <div class="language">
           <ul class="text-right list-unstyled">
             <li>C++</li>
@@ -21,11 +20,12 @@
           </ul>
         </div>
         <div class="mobile">
-          
+          <%= image_tag ('iphone.png')%>
         </div>
       </section>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-5">
+      <div class="header_white_space"></div>
       <section class="email_register text-left">
         <form action="" class="form-inline">   
           <label for="">Developer Register now for early access</label>       
@@ -39,7 +39,7 @@
   </div>
 </header>
     <!-- Team Section -->
-<section id="team" class="bg-light-gray">
+<section id="team">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -57,18 +57,22 @@
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem2"></div>                        
-          <h4>Eric, USA</h4>
-          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                       
+          <h4>Amit, Bangladesh</h4>
+          <p> Is eligible to submit for jobs on NodeBomb, he now has less competition for jobs & he no longer has to lower his reates to compete.</p>                       
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem3"></div>
                                
-          <h4>Eric, USA</h4>
-          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                       
+          <h4> Pavel, Canada</h4>
+          <p> A CS student in University. He uses NodeBomb's Group Forums to get fast and friendly code and programming questions answered.</p>                       
         </div>
       </div>
     </div>
   </div>
+</section>
+
+<section>
+ d 
 </section>
