--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default main-navbar">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header page-scroll">
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand page-scroll" href="#page-top">
-        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bome</span>
+        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bomb</span>
       </a>
     </div>
 
