implement the nodebomb community content in home page

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -59,6 +59,7 @@
   .mem3
     background-image: url('3.jpg')
 
+
 header
   height: 660px
   position: relative
@@ -76,4 +77,41 @@ header
     font-size: 16px
     color: #000
 
+
+
+section
+  padding: 30px 0px
+.section-heading
+  font-weight: normal !important
+  margin-top: 30px !important
+  font-size: 30px !important
+  margin-bottom: 20px
+.dark-grey
+  background-color: #DDD 
+
+.node-bomb-community
+  text-align: center
+.node-bomb-community p
+  font-size: 23px
+  line-height: 30px
+  margin-top: 10px
+.community-section-heading
+  margin-bottom: 30px
+.community-btns
+  font-size: 70px
+  padding: 35px
+  border-radius: 50%
+  color: #fff
+  margin: 0 auto
+  height: 170px
+  width: 170px
+
+.suitcase
+  background-color: #01A33E
+.users
+  background-color: #01A0C7
+.comments
+  background-color: #FE0000
+.dollor
+  background-color: #0060B6
 
