--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,7 @@
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
           <h4>Eric, USA</h4>
-          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                       
+          <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                      
         </div>
       </div>
       <div class="col-sm-4">
@@ -73,6 +73,39 @@
   </div>
 </section>
 
-<section>
- d 
+<section id="community" class="dark-grey">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="community-section-heading">Join the nodebomb community in 1-2-3-4</h2>
+      </div>
+      <div class="row-community">
+        <div class="col-sm-3 text-center">
+          <div class="node-bomb-community">
+            <div class="community-btns suitcase"><i class="fa fa-suitcase "></i></div>
+            <p>Increase job opportunities with a well Design portfolio!</p>
+          </div>
+        </div>
+        <div class="col-sm-3 text-center">
+          <div class="node-bomb-community">
+            <div class="community-btns users"><i class="fa fa-users"></i></div>
+            <p>Connect with Developer across the world</p>
+          </div>
+        </div>
+        <div class="col-sm-3 text-center">
+          <div class="node-bomb-community">
+            <div class="community-btns comments"><i class="fa fa-comments"></i></div>
+            <p>Search and join our many Q&A Groups</p>
+          </div>
+        </div>
+        <div class="col-sm-3 text-center">
+          <div class="node-bomb-community">
+            <div class="community-btns dollor"><i class="fa fa-usd"></i></div>
+            <p>Startups Connect with investors</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+
