--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -82,9 +82,9 @@ header
 section
   padding: 30px 0px
 .section-heading
-  font-weight: normal !important
-  margin-top: 30px !important
-  font-size: 30px !important
+  font-weight: normal
+  margin-top: 30px
+  font-size: 30px 
   margin-bottom: 20px
 .dark-grey
   background-color: #DDD 
