Changed placeholder color of email registration form

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -115,3 +115,18 @@ section
 .dollor
   background-color: #0060B6
 
+header
+  input[type="text"]::-webkit-input-placeholder 
+    color: #fff
+
+
+  input[type="text"]:-moz-placeholder  
+    color: #fff  
+
+
+  input[type="text"]::-moz-placeholder   
+    color: #fff  
+
+
+  input[type="text"]:-ms-input-placeholder   
+    color: #fff  
