fixed the error of margin,padding and font-styles in succesfull stories content

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,14 +50,14 @@
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
-          <h4>Eric, USA</h4>
+          <h4><span class="story-prsn-name">Eric</span>, USA</h4>
           <p> Uses NodeBomb to enhance his work profile and create a profolio. He just landed his dream job.</p>                      
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem2"></div>                        
-          <h4>Amit, Bangladesh</h4>
+          <h4><span class="story-prsn-name">Amit</span>, Bangladesh</h4>
           <p> Is eligible to submit for jobs on NodeBomb, he now has less competition for jobs & he no longer has to lower his reates to compete.</p>                       
         </div>
       </div>
@@ -65,7 +65,7 @@
         <div class="team_member text-center">
           <div class="team_images mem3"></div>
                                
-          <h4> Pavel, Canada</h4>
+          <h4><span class="story-prsn-name">Pavel</span>, Canada</h4>
           <p> A CS student in University. He uses NodeBomb's Group Forums to get fast and friendly code and programming questions answered.</p>                       
         </div>
       </div>
@@ -79,7 +79,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="community-section-heading">Join the nodebomb community in 1-2-3-4</h2>
       </div>
-      <div class="row-community">
+      <div class="row">
         <div class="col-sm-3 text-center">
           <div class="node-bomb-community">
             <div class="community-btns suitcase"><i class="fa fa-suitcase "></i></div>
