--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -51,9 +51,8 @@ h3,
 h4,
 h5,
 h6 {
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 700;
 }
 
 .img-centered {
@@ -329,7 +328,7 @@ section {
 section h2.section-heading {
   margin-top: 0;
   margin-bottom: 15px;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 section h3.section-subheading {
