--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -52,8 +52,7 @@ h4,
 h5,
 h6 {
   text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 700;
+  font-family: 'texgyreadventor-regular',"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .img-centered {
