--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,39 +2,41 @@
 <!-- Header -->
 <header>  
   <div class="container">
-    <div class="col-md-7">
-      <section class="text-right header-element">
-        <div class="language">
-          <ul class="text-right list-unstyled">
-            <li>C++</li>
-            <li>java</li>
-            <li>pythan</li>
-            <li>ruby</li>
-            <li>php</li>
-            <li>mysql</li>
-            <li>c-sharp</li>
-            <li>c-objective</li>
-            <li>ajax</li>
-            <li>perl</li>
-            <li>javascript</li>
-          </ul>
-        </div>
-        <div class="mobile">
-          <%= image_tag ('iphone.png')%>
-        </div>
-      </section>
-    </div>
-    <div class="col-md-5">
-      <div class="header_white_space"></div>
-      <section class="email_register text-left">
-        <form action="" class="form-inline">   
-          <label for="">Developer Register now for early access</label>       
-          <div class="form-group">            
-            <input type="text" class="form-control" placeholder="Enter your email address">
-            <button type="submit" class="btn btn-default">Submit</button>
+    <div class="row">
+      <div class="col-md-7">
+        <section class="text-right header-element">
+          <div class="language">
+            <ul class="text-right list-unstyled">
+              <li>C++</li>
+              <li>java</li>
+              <li>pythan</li>
+              <li>ruby</li>
+              <li>php</li>
+              <li>mysql</li>
+              <li>c-sharp</li>
+              <li>c-objective</li>
+              <li>ajax</li>
+              <li>perl</li>
+              <li>javascript</li>
+            </ul>
           </div>
-        </form>
-      </section>
+          <div class="mobile">
+            <%= image_tag ('iphone.png')%>
+          </div>
+        </section>
+      </div>
+      <div class="col-md-5">
+        <div class="header_white_space"></div>
+        <section class="email_register text-left">
+          <form action="" class="form-inline">   
+            <label for="">Developer Register now for early access</label>       
+            <div class="form-group">            
+              <input type="text" class="form-control" placeholder="Enter your email address">
+              <button type="submit" class="btn btn-default">Submit</button>
+            </div>
+          </form>
+        </section>
+      </div>
     </div>
   </div>
 </header>
