fixed the margins,padding and font size in community content and added service content in home page

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -111,8 +111,10 @@ section
   line-height: 30px
   margin-top: 10px
 .community-section-heading
-  margin-bottom: 50px
+  margin: 50px 0px 40px
+  text-transform: capitalize
   font-weight: normal
+  font-size: 38px
 
 .community-btns
   font-size: 70px
@@ -131,4 +133,9 @@ section
   background-color: #FE0000
 .dollor
   background-color: #0060B6
+.service-heading
+  font-size: 55px
+  color: #676767
+  padding-top: 180px
+  min-height: 400px
 
