--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="community-section-heading">Join the nodebomb community in 1-2-3-4</h2>
+        <h2 class="community-section-heading">Join the nodeBomb community in 1-2-3-4</h2>
       </div>
       <div class="row">
         <div class="col-sm-3 text-center">
@@ -108,4 +108,11 @@
     </div>
   </div>
 </section>
-
+<section id="service">
+  <div class="container">
+    <div class="row text-center">
+      <h2 class="service-heading">INCREASE.CONNECT & SUPPORT</h2>
+    </div>
+  </div>
+  
+</section>
