--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -130,8 +130,16 @@ section
   margin-top: 10px
   padding: 0 23px
 
+
+.community-row
+  margin-left: -35px
+  margin-right: -35px 
+  
+#community
+  padding: 30px 0px
+
 .community-section-heading
-  margin: 50px 0px 40px
+  margin-bottom: 30px
   text-transform: capitalize
   font-weight: normal
   font-size: 38px
