--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
 
 <section id="community" class="dark-grey">
   <div class="container">
-    <div class="row">
+    <div class="row community-row">
       <div class="col-lg-12 text-center">
         <h2 class="community-section-heading">Join the nodeBomb community in 1-2-3-4</h2>
       </div>
