--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -106,11 +106,13 @@ section
   text-transform: capitalize
 .story-prsn-name
   font-size: 25px
+.team_member
+  padding: 0 20px
 .team_member h4
   line-height: 0.4
 .team_member p
   text-align: center
-  font-size: 19px
+  font-size: 16px
   line-height: 24px
 .team_images
   width: 280px
@@ -121,9 +123,11 @@ section
 .node-bomb-community
   text-align: center
 .node-bomb-community p
-  font-size: 23px
-  line-height: 30px
+  font-size: 18px
+  line-height: 25px
   margin-top: 10px
+  padding: 0 23px
+
 .community-section-heading
   margin-bottom: 50px
   font-weight: normal
