--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
         <div class="team_member text-center">
           <div class="team_images mem2"></div>                        
           <h4><span class="story-prsn-name">Amit</span>, Bangladesh</h4>
-          <p> Is eligible to submit for jobs on NodeBomb, he now has less competition for jobs & he no longer has to lower his reates to compete.</p>                       
+          <p> Is eligible to submit for jobs on NodeBomb, he now has less competition for jobs & he no longer has to lower his rates to compete.</p>                       
         </div>
       </div>
       <div class="col-sm-4">
