Change fonts of logo

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -174,8 +174,12 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-  font-family: "opensans-regular";
+  font-family: "texgyreadventor-regular";
   color: #fed136;
+}
+
+.navbar-brand{
+  padding: 0 0 0 15px;
 }
 
 .navbar-default .navbar-brand:hover,
