hovering effect in banner subit button

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -33,6 +33,8 @@
     background: #ff9900
     border: none
     color: #fff
+    &:hover
+      background: #FED136
   .form-control, .btn  
     height: 40px
     border-radius: 0
