resize margins in community content

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -136,10 +136,10 @@ section
   margin-right: -35px 
 
 #community
-  padding: 40px 0px
+  padding: 30px 0px 50px
 
 .community-section-heading
-  margin-bottom: 30px
+  margin-bottom: 40px
   text-transform: capitalize
   font-weight: normal
   font-size: 35px
