--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">
+      <a class="navbar-brand page-scroll" href="/">
         <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bomb</span>
       </a>
     </div>
@@ -20,20 +20,20 @@
         <li class="hidden">
           <a href="#page-top"></a>
         </li>
-        <li>
-          <a class="page-scroll" href="#services">About</a>
+        <li>          
+          <a class="page-scroll" href="/about">About</a>
         </li>
         <li>
-          <a class="page-scroll" href="#portfolio">Deck</a>
+          <a class="page-scroll" href="/deck">Deck</a>
         </li>
         <li>
-          <a class="page-scroll" href="#about">Video</a>
+          <a class="page-scroll" href="/video">Video</a>
         </li>
         <li>
-          <a class="page-scroll" href="#team">Staff</a>
+          <a class="page-scroll" href="/staff">Staff</a>
         </li>
         <li>
-          <a class="page-scroll" href="#contact">Contact</a>
+          <a class="page-scroll" href="/contact">Contact</a>
         </li>
       </ul>
     </div>
