--- a/app/views/home/video.html.erb
+++ b/app/views/home/video.html.erb
@@ -1,1 +1,6 @@
-video
+<div class="row">
+  <div class="container">
+  <iframe src="https://player.vimeo.com/video/130290280" width="100%" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+
+  </div>
+</div>
