--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -167,3 +167,26 @@ section
   padding-top: 180px
   min-height: 400px
 
+/* staff contents css start here */
+
+#staff 
+  section
+    width: 100%
+    height: 430px
+    position: relative
+  .col-md-6
+    height: 100%
+.staff-info
+  height: 100%
+  width: 100%
+  text-align: center
+  padding: 30px
+
+.staff-img
+  height: 100%
+
+  img
+    height: 100%
+
+.bg-gery
+  background-color: #ccc
