--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -1,1 +1,43 @@
-staff
+<section id="staff">
+
+    <section class="row">
+      <div class="col-md-6">
+        <div class="staff-info">
+          <h2>asdfgngfglkjdfg</h2>
+          <p>hsahd dh kfksd fhsdjkf hsdk fkds fksd fsd fkds kf sd f sd</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="staff-img">
+          <%= image_tag ('1.jpg')%>
+        </div>
+      </div>
+    </section>
+    <section class="row bg-gery">
+        <div class="col-md-6">
+          <div class="staff-img">
+            <%= image_tag ('2.jpg')%>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="staff-info ">
+            <h2>asdfgngfglkjdfg</h2>
+            <p>hsahd dh kfksd fhsdjkf hsdk fkds fksd fsd fkds kf sd f sd</p>
+          </div>
+        </div>
+      </section>
+      <section class="row">
+        <div class="col-md-6">
+          <div class="staff-info ">
+            <h2>asdfgngfglkjdfg</h2>
+            <p>hsahd dh kfksd fhsdjkf hsdk fkds fksd fsd fkds kf sd f sd</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="staff-img">
+            <%= image_tag ('3.jpg')%>
+          </div>
+        </div>
+      </section>
+
+</section>
