displayed video on popup while click on video navigation

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,7 +27,7 @@
           <a class="page-scroll" href="/deck">Deck</a>
         </li>
         <li>
-          <a class="page-scroll" href="/video">Video</a>
+          <a class="page-scroll" href="#" data-toggle="modal" data-target=".video-modal-lg">Video</a>
         </li>
         <li>
           <a class="page-scroll" href="/staff">Staff</a>
