--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,13 @@
   <%= render 'shared/header'%>
   <%= yield %>
   <%= render 'shared/footer'%>
+
+  <div class="modal fade video-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+         <iframe src="https://player.vimeo.com/video/130290280" width="100%" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+      </div>
+    </div>
+  </div>
   </body>
 </html>
