Completed to create contact page - removed phone field from form. - split the page on two part form and address informaiton - added address on right side

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -167,3 +167,17 @@ section
   padding-top: 180px
   min-height: 400px
 
+#contact
+  .section-heading
+    border-bottom: 1px solid #f3f3f3 
+  .form-control
+    border-radius: 0
+  .addressblock
+    color: #f0f0f0
+    border-bottom: 1px solid #ccc
+    margin-bottom: 20px
+    padding-bottom: 10px
+
+    & > p:first-child
+      color: #ff9900
+      font-weight: bold
