--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,7 +10,7 @@
 }
 
 .text-muted {
-  color: #777;
+  color: #ccc;
 }
 
 .text-primary {
@@ -97,6 +97,7 @@ h6 {
 fieldset[disabled] .btn-primary,
 .btn-primary.disabled:hover,
 .btn-primary[disabled]:hover,
+
 fieldset[disabled] .btn-primary:hover,
 .btn-primary.disabled:focus,
 .btn-primary[disabled]:focus,
