completed to implement design on staff page fixed the height of section change the background-color of member section Adjust the width of member section column Added actual name and country name in h2 tag and reduce the font-size of country name

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -171,8 +171,7 @@ section
 
 #staff 
   section
-    width: 100%
-    height: 430px
+    height: 540px
     position: relative
   .col-md-6
     height: 100%
@@ -181,6 +180,12 @@ section
   width: 100%
   text-align: center
   padding: 30px
+  margin-top: 90px
+  h2
+    padding-bottom: 10px
+  p
+    padding-top: 20px
+    font-size: 17px
 
 .staff-img
   height: 100%
@@ -189,4 +194,12 @@ section
     height: 100%
 
 .bg-gery
-  background-color: #ccc
+  background-color: #F1F1F1
+.name-border
+  margin: 0 auto
+  width: 30px
+  border-bottom: 5px solid #ff9900
+
+.country-name
+  font-size: 20px
+  font-weight: normal
