--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@
 }
 
 .text-primary {
-  color: #fed136;
+  color: #ff9900;
 }
 
 p {
@@ -35,14 +35,14 @@ a.active {
 }
 
 a {
-  color: #fed136;
+  color: #ff9900;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #ED8E00;
 }
 
 h1,
@@ -68,12 +68,12 @@ h6 {
 }
 
 .btn-primary {
-  border-color: #fed136;
+  border-color: #ff9900;
   text-transform: uppercase;
   font-family: 'texgyreadventor-regular',"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700;
   color: #fff;
-  background-color: #fed136;
+  background-color: #ff9900;
 }
 
 .btn-primary:hover,
@@ -108,12 +108,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  border-color: #fed136;
-  background-color: #fed136;
+  border-color: #ff9900;
+  background-color: #ff9900;
 }
 
 .btn-primary .badge {
-  color: #fed136;
+  color: #ff9900;
   background-color: #fff;
 }
 
@@ -165,7 +165,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .btn-xl .badge {
-  color: #fed136;
+  color: #ff9900;
   background-color: #fff;
 }
 
@@ -176,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
   font-family: "texgyreadventor-regular";
-  color: #fed136;
+  color: #ff9900;
 }
 
 .navbar-brand{
@@ -195,8 +195,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-  border-color: #fed136;
-  background-color: #fed136;
+  border-color: #ff9900;
+  background-color: #ff9900;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -205,7 +205,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: #ff9900;
 }
 
 .navbar-default .nav li a {
@@ -225,7 +225,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-nav>.active>a {
   border-radius: 0;
   color: #fff;
-  background-color: #fed136;
+  background-color: #ff9900;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
@@ -334,6 +334,7 @@ section h2.section-heading {
   margin-top: 0;
   margin-bottom: 15px;
   font-size: 35px;
+  color: #fff
 }
 
 section h3.section-subheading {
@@ -499,7 +500,7 @@ section h3.section-subheading {
   border-radius: 100%;
   text-align: center;
   color: #fff;
-  background-color: #fed136;
+  background-color: #ff9900;
 }
 
 .timeline>li .timeline-image h4 {
@@ -689,7 +690,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #ff9900;
   box-shadow: none;
 }
 
@@ -728,6 +729,7 @@ section#contact .text-danger {
 footer {
   padding: 25px 0;
   text-align: center;
+  background: #333
 }
 
 footer span.copyright {
@@ -735,6 +737,7 @@ footer span.copyright {
   text-transform: none;
   font-family: 'texgyreadventor-regular',"Helvetica Neue",Helvetica,Arial,sans-serif;
   line-height: 40px;
+  color: #fff
 }
 
 footer ul.quicklinks {
@@ -767,7 +770,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: #ff9900;
 }
 
 .btn:focus,
@@ -855,12 +858,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: #ff9900;
 }
 
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: #ff9900;
 }
 
 img::selection {
@@ -872,5 +875,5 @@ img::-moz-selection {
 }
 
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: #ff9900;
 }
