--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -167,7 +167,7 @@ section
   padding-top: 180px
   min-height: 400px
 
-#contact
+#contact, #staff
   .section-heading
     border-bottom: 1px solid #f3f3f3 
   .form-control
@@ -219,3 +219,6 @@ section
   font-size: 20px
   font-weight: normal
 
+
+.heading-bg
+  background: #333
