--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -1,46 +1,54 @@
-<section id="staff">
 
-    <section class="row bg-gery">
-      <div class="col-md-5">
-        <div class="staff-info">
-          <h2>Eric, <span class="country-name">USA</span></h2>
-          <div class="name-border"></div>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-        </div>
+<section id="staff">
+  <div class="heading-bg row">
+    <div class="container">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Staff</h2>
+        <h3 class="section-subheading text-muted">Together Everyone Achieves More.</h3>
       </div>
-      <div class="col-md-7">
-        <div class="staff-img">
-          <%= image_tag ('staff-1.png')%>
-        </div>
+    </div>
+  </div>
+  <section class="row bg-gery">
+    <div class="col-md-5">
+      <div class="staff-info">
+        <h2>Eric, <span class="country-name">USA</span></h2>
+        <div class="name-border"></div>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
       </div>
-    </section>
-    <section class="row">
-        <div class="col-md-7">
-          <div class="staff-img">
-            <%= image_tag ('staff-2.png')%>
-          </div>
-        </div>
-        <div class="col-md-5">
-          <div class="staff-info ">
-            <h2>Amit, <span class="country-name">Bangladesh</span></h2>
-            <div class="name-border"></div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-          </div>
-        </div>
-    </section>
-    <section class="row bg-gery">
-      <div class="col-md-5">
-        <div class="staff-info ">
-          <h2>Pavel, <span class="country-name">Canada</span></h2>
-          <div class="name-border"></div>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
-        </div>
+    </div>
+    <div class="col-md-7">
+      <div class="staff-img">
+        <%= image_tag ('staff-1.png')%>
       </div>
-      <div class="col-md-7">
-        <div class="staff-img">
-          <%= image_tag ('staff-3.png')%>
-        </div>
+    </div>
+  </section>
+  <section class="row">
+    <div class="col-md-7">
+      <div class="staff-img">
+        <%= image_tag ('staff-2.png')%>
       </div>
-    </section>
+    </div>
+    <div class="col-md-5">
+      <div class="staff-info ">
+        <h2>Amit, <span class="country-name">Bangladesh</span></h2>
+        <div class="name-border"></div>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+      </div>
+    </div>
+  </section>
+  <section class="row bg-gery">
+    <div class="col-md-5">
+      <div class="staff-info ">
+        <h2>Pavel, <span class="country-name">Canada</span></h2>
+        <div class="name-border"></div>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+      </div>
+    </div>
+    <div class="col-md-7">
+      <div class="staff-img">
+        <%= image_tag ('staff-3.png')%>
+      </div>
+    </div>
+  </section>
 
 </section>
