complete to design about page added about_1 img in image folder and also implement in about page by giving appropriate height and width added dummy text lorem ipsum in about us page content.

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -222,3 +222,10 @@ section
 
 .heading-bg
   background: #333
+
+/* About pages css start here */
+
+.about-img
+  margin-top: 25px
+  img
+    width: 100%
