changes path name background url on css and

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -55,11 +55,11 @@
     background-size: cover
     margin: 0 auto
   .mem1
-    background-image: url('1.jpg')
+    background-image: asset_url('1.jpg')
   .mem2
-    background-image: url('2.jpg')
+    background-image: asset_url('2.jpg')
   .mem3
-    background-image: url('3.jpg')
+    background-image: asset_url('3.jpg')
 
 
 header
