--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -269,7 +269,7 @@ header {
   text-align: center;
   color: #fff;
   background-attachment: scroll;
-  background-image: url('header_bg.jpg');
+  background-image: asset_url('header_bg.jpg');
   background-position: center center;
   background-repeat: none;
   -webkit-background-size: cover;
