--- a/app/views/home/deck.html.erb
+++ b/app/views/home/deck.html.erb
@@ -1,1 +1,8 @@
-deck
+<div class="heading-bg row">
+  <div class="container">
+    <div class="col-lg-12 text-center">
+      <h2 class="section-heading">Staff</h2>
+      <h3 class="section-subheading text-muted">Together Everyone Achieves More.</h3>
+    </div>
+  </div>
+</div>
