--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -24,7 +24,7 @@
           <a class="page-scroll" href="/about">About</a>
         </li>
         <li>
-          <a class="page-scroll" href="/deck">Deck</a>
+          <a class="page-scroll" href="#">Deck</a>
         </li>
         <li>
           <a class="page-scroll" href="#" data-toggle="modal" data-target=".video-modal-lg">Video</a>
