fixed html layout indentation and content margins & font-size of aboutus page

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -167,7 +167,7 @@ section
   padding-top: 180px
   min-height: 400px
 
-#contact, #staff
+#contact, #staff, #about
   .section-heading
     border-bottom: 1px solid #f3f3f3 
   .form-control
@@ -224,12 +224,15 @@ section
   background: #333
 
 /* About pages css start here */
-
+#about
+  margin: 30px 0px
 .about-img
   margin-top: 25px
-  margin-bottom: 15px
   img
     width: 100%
-
+.about-content,
 .last-p
-  margin-bottom: 80px
+  p
+    font-size: 16px
+    margin-bottom: 0px
+
