--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,15 +1,26 @@
-<section class="container">
-  <div class="row">
-    <div class="col-md-5">
-      <div class="about-img"> 
-        <%= image_tag ('about_1.jpg')%>
+<section id ="about">
+  <div class="row row heading-bg">
+    <div class="container">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">About Us</h2>
+        <h3 class="section-subheading text-muted">We’re happy to answer any questions you have or provide you with an estimate. Just send us a message in the form below.</h3>
       </div>
     </div>
-    <div class="col-md-7 about-content">
-      <h2>Welcome to NodeBomb</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-    </div>
-    <div class="col-md-12 last-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-    </div>
+  </div>
+  <div class="row">
+    <div class="container">
+      <div class="col-md-5">
+        <div class="about-img"> 
+          <%= image_tag ('about_1.jpg')%>
+        </div>
+      </div>
+      <div class="col-md-7 about-content">
+        <h2>Welcome to NodeBomb</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text.Lorem Ipsum has been the industry's standard dummy text ever since.Lorem Ipsum has been the industry's .</p>
+      </div>
+      <div class="col-md-12 last-p">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      </div>
+  </div>
   </div>
 </section>
