remove unnecessary content from about us page

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -225,13 +225,16 @@ section
 
 /* About pages css start here */
 #about
-  margin: 30px 0px
+  padding: 50px 0px
 .about-img
-  margin-top: 25px
+  margin-top: 50px
   img
     width: 100%
 .about-content,
 .last-p
+  h2
+    margin-top: 50px
+    margin-bottom: 30px
   p
     font-size: 16px
     margin-bottom: 0px
