fixed the error of about us page

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -224,16 +224,15 @@ section
   background: #333
 
 /* About pages css start here */
-#about
-  padding: 50px 0px
+.about-sec
+  padding: 40px 0px 50px
 .about-img
-  margin-top: 50px
+  margin-top: 25px
   img
     width: 100%
 .about-content,
 .last-p
   h2
-    margin-top: 50px
     margin-bottom: 30px
   p
     font-size: 16px
