--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="container">
+    <div class="container about-sec">
       <div class="col-md-5">
         <div class="about-img"> 
           <%= image_tag ('about_1.jpg')%>
