--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -174,6 +174,9 @@ fieldset[disabled] .btn-xl.active {
   background-color: #222;
 }
 
+.navbar{
+  margin-bottom: 0;
+}
 .navbar-default .navbar-brand {
   font-family: "texgyreadventor-regular";
   color: #ff9900;
@@ -338,7 +341,7 @@ section h2.section-heading {
 }
 
 section h3.section-subheading {
-  margin-bottom: 75px;
+  margin-bottom: 50px;
   text-transform: none;
   font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
