--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,9 +1,9 @@
 <section id ="about">
   <div class="row row heading-bg">
     <div class="container">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-left">
         <h2 class="section-heading">About Us</h2>
-        <h3 class="section-subheading text-muted">We’re happy to answer any questions you have or provide you with an estimate. Just send us a message in the form below.</h3>
+        <h3 class="section-subheading text-muted"></h3>
       </div>
     </div>
   </div>
