--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -2,9 +2,9 @@
 <section id="staff">
   <div class="heading-bg row">
     <div class="container">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-left">
         <h2 class="section-heading">Staff</h2>
-        <h3 class="section-subheading text-muted">Together Everyone Achieves More.</h3>
+        <h3 class="section-subheading text-muted"></h3>
       </div>
     </div>
 </div>
