change text url to asset_url on home.scss

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -664,7 +664,7 @@ aside.clients img {
 
 section#contact {
   background-color: #222;
-  background-image: url('map-image.png');
+  background-image: asset_url('map-image.png');
   background-position: center;
   background-repeat: no-repeat;
   margin-top: -20px;
