Modified the design on staff page - removed the fixed height of team block - added job position and university of staff - replaced the new name of teams - added two new team member on staff

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -186,37 +186,44 @@ section
 
 #staff 
   section
-    height: 540px
     position: relative
   .col-md-6
     height: 100%
+    padding: 0 
 .staff-info
   height: 100%
   width: 100%
   text-align: center
   padding: 30px
-  margin-top: 90px
+  
   h2
     padding-bottom: 10px
+  
   p
     padding-top: 20px
-    font-size: 17px
-
+    font-size: 16px
+  
+  .subheading
+    margin-top: 15px
+    strong
+      border-right: 1px solid #000
+      padding-right: 5px
 .staff-img
   height: 100%
+  width: 100%
 
   img
     height: 100%
+    width: 100%
 
 .bg-gery
   background-color: #F1F1F1
 .name-border
-  margin: 0 auto
-  width: 30px
-  border-bottom: 5px solid #ff9900
+  margin: 0px auto
+  width: 360px
+  border-bottom: 1px solid rgb(255, 153, 0)
 
-.country-name
-  font-size: 20px
+.university-name
   font-weight: normal
 
 
