--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -9,46 +9,114 @@
     </div>
 </div>
   <section class="row bg-gery">
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="staff-info">
-        <h2>Eric, <span class="country-name">USA</span></h2>
+        <h2>Danso Gordon</h2>
         <div class="name-border"></div>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+        <div class="subheading">
+          <strong>Founder</strong>
+          <span class="university-name">UCLA</span>
+        </div>
+        
+        <p>A UCLA Science graduate, his diverse experience in film & television as well as his recent studies towards a second BS in Computer Science has given him a refreshing approach towards the tech industry. After 10 years in the film industry, being a part of projects that have awards in Sundance and Cannes, to a clothing line he designed/founded that expanded its reach worldwide, from Japan to Puerto Rico, Danso has set his sites on the tech industry. His keen eye towards design and back end development as well as his professional reach gives NodeBomb a huge advantage.</p>
       </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-6">
       <div class="staff-img">
         <%= image_tag ('staff-1.png')%>
       </div>
     </div>
   </section>
   <section class="row">
-    <div class="col-md-7">
+    <div class="col-md-6">
       <div class="staff-img">
         <%= image_tag ('staff-2.png')%>
       </div>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="staff-info ">
-        <h2>Amit, <span class="country-name">Bangladesh</span></h2>
+        <h2>Patrick Watson</h2>
         <div class="name-border"></div>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+        <div class="subheading">
+          <strong>Marketing</strong>
+          <span class="university-name">University of Massachusetts</span>
+        </div>
+        <p>451 Marketing is a fully
+          integrated marketing and
+          communications agency
+          specializing in creative services,
+          advertising, public relations,
+          digital and social marketing,
+          media buying, experiential, and
+          content marketing. I manage,
+          facilitate, and develop new business
+          proposals and sales collateral.
+        </p>
       </div>
     </div>
   </section>
   <section class="row bg-gery">
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="staff-info ">
-        <h2>Pavel, <span class="country-name">Canada</span></h2>
+        <h2>Stephen Curry</h2>
         <div class="name-border"></div>
+        <div class="subheading">
+          <strong>Front End Developer</strong>
+          <span class="university-name">UCSB</span>
+        </div>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
       </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-6">
       <div class="staff-img">
         <%= image_tag ('staff-3.png')%>
       </div>
     </div>
   </section>
-
+  <section class="row">
+    <div class="col-md-6">
+      <div class="staff-img">
+        <%= image_tag ('staff-2.png')%>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="staff-info ">
+        <h2>Joshua Hall</h2>
+        <div class="name-border"></div>
+        <div class="subheading">
+          <strong>Back End Developer</strong>
+          <span class="university-name">UCSB</span>
+        </div>
+        <p>451 Marketing is a fully
+          integrated marketing and
+          communications agency
+          specializing in creative services,
+          advertising, public relations,
+          digital and social marketing,
+          media buying, experiential, and
+          content marketing. I manage,
+          facilitate, and develop new business
+          proposals and sales collateral.
+        </p>
+      </div>
+    </div>
+  </section>
+    <section class="row bg-gery">
+    <div class="col-md-6">
+      <div class="staff-info ">
+        <h2>Mackenzie Singh</h2>
+        <div class="name-border"></div>
+        <div class="subheading">
+          <strong>Back End Developer</strong>
+          <span class="university-name">UCSB</span>
+        </div>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="staff-img">
+        <%= image_tag ('staff-3.png')%>
+      </div>
+    </div>
+  </section>
 </section>
