--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,7 +2,7 @@
 <section id="contact">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-left">
+      <div class=" text-left">
         <h2 class="section-heading">Contact Us</h2>
         <h3 class="section-subheading text-muted">We’re happy to answer any questions you have or provide you with an estimate. Just send us a message in the form below.</h3>
       </div>
