--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -2,12 +2,13 @@
 <section id="staff">
   <div class="heading-bg row">
     <div class="container">
-      <div class="col-lg-12 text-left">
-        <h2 class="section-heading">Staff</h2>
+      <div class="text-left">
+        <h2 class="section-heading">Meet the NodeBomb Team</h2>
         <h3 class="section-subheading text-muted"></h3>
       </div>
     </div>
   </div>
+
   <section class="row bg-gery">
     <div class="col-md-6">
       <div class="staff-info">
