Redesign contact information on contact page - Include title funding inquiries - used fontawesome icons of telephone and email - Changed design of contacts information

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -256,3 +256,30 @@ section
     margin-bottom: 0px
 #team h2.section-heading
   color: #000
+
+.addressblock
+  .fa
+    font-size: 24px
+    display: inline-block
+    position: relative
+    top: -7px
+    background: #000
+    padding: 10px
+  span
+    display: inline-block
+    padding-left: 13px
+
+.subcontact
+  .telephone span
+    padding-left: 15px
+  .telephone .fa
+    padding: 10px 12px
+
+  
+  h4
+    color: #ff9900
+    margin-bottom: 15px
+    margin-top: 0
+
+  p
+    margin-bottom: 0px
