--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -27,16 +27,26 @@
                 <button type="submit" class="btn btn-xl">Send Message</button>
               </div>
             </div>
-            <div class="col-md-4 col-md-offset-2 ">
-              <div class="addressblock address">
-                <p>Address:</p>
-                <p>
-                  66 Norburn, Peterborough, Peterborough PE3 8NT, UK
-                </p>
+            <div class="col-md-4 col-md-offset-2 subcontact">
+              <h4>Funding Inquiries</h4>
+              <div class="addressblock telephone">
+                <i class="fa fa-phone">
+                </i>
+                <span class="content">
+                  <p>Telephone:</p>
+                  <p>
+                    818-322-6168
+                  </p>  
+                </span>
+                
               </div>
               <div class="addressblock email">
+              <i class="fa fa-envelope-o ">
+                </i>
+              <span>
                 <p>Email:</p>
                 <p>nodebomb@info.com</p>
+              </span>
               </div>
             </div>
           </div>
