gave white spacing between staff position and univercity

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -216,8 +216,9 @@ section
   .subheading
     margin-top: 15px
     strong
-      border-right: 1px solid #000
-      padding-right: 5px
+      border-right: 1px solid #333      
+      padding-right: 10px
+      margin-right: 5px
 .staff-img
   height: 100%
   width: 100%
