Message added below of logo on front page - added pragraph on below logo - used suitable font size and color

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,8 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand page-scroll" href="/">
-        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bomb</span>
+        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bomb</span><br>
+        <p>The online showcase for software developers,enhance your work, connent & learn with developers everyone</p>
       </a>
     </div>
 
