--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -1,3 +1,12 @@
+a.navbar-brand 
+  display: block
+  height: 0
+  p
+    font-size: 13px
+    width: 330px
+    padding-left: 50px
+    color: #fff
+    line-height: 18px
 .navbar-brand img
   width: 40px
   display: inline-block
@@ -70,8 +79,9 @@ header
   .container
     position: relative
     top: 150px
-  &-element
+  .header-element
     position: relative
+    margin-top: 10px
   .language
     position: absolute
     top: 90px
