reduced the padding of navbar and increased height of logo

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -1,6 +1,8 @@
+.navbar-default
+  padding: 15px 0
 a.navbar-brand 
   display: block
-  height: 0
+  height: 90px
   p
     font-size: 13px
     width: 330px
