--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -1,5 +1,11 @@
 .navbar-default
   padding: 15px 0
+.inner_logocontent
+  a.navbar-brand p
+    color: #333
+.home_logocontent
+  a.navbar-brand p
+    color: #fff
 a.navbar-brand 
   display: block
   height: 90px
@@ -7,7 +13,6 @@ a.navbar-brand
     font-size: 13px
     width: 330px
     padding-left: 50px
-    color: #fff
     line-height: 18px
 .navbar-brand img
   width: 40px
