Change contents of section NodeBomb community Display nodebomb community into three column. remove icons inside circle of nodebomb community content Change the content texts below the circle.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -81,30 +81,30 @@
         <h2 class="community-section-heading">Join the nodeBomb community in 1-2-3-4</h2>
       </div>
       <div class="row">
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-4 text-center">
           <div class="node-bomb-community">
-            <div class="community-btns suitcase"><i class="fa fa-suitcase "></i></div>
-            <p>Increase job opportunities with a well Design portfolio!</p>
+            <div class="community-btns suitcase"><!-- <i class="fa fa-suitcase "></i> --></div>
+            <p>Enhance the work profile quickly and increase job opportunities with well designed portfolio!</p>
           </div>
         </div>
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-4 text-center">
           <div class="node-bomb-community">
-            <div class="community-btns users"><i class="fa fa-users"></i></div>
-            <p>Connect with Developer across the world</p>
+            <div class="community-btns users"><!-- <i class="fa fa-users"></i> --></div>
+            <p>Connect with Developer across the entire globe!</p>
           </div>
         </div>
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-4 text-center">
           <div class="node-bomb-community">
-            <div class="community-btns comments"><i class="fa fa-comments"></i></div>
-            <p>Search and join our many Q&A Groups</p>
+            <div class="community-btns comments"><!-- <i class="fa fa-comments"></i> --></div>
+            <p>Search our endless of progamming Groups ask questions and code edits,quickly.</p>
           </div>
         </div>
-        <div class="col-sm-3 text-center">
+        <!-- <div class="col-sm-3 text-center">
           <div class="node-bomb-community">
             <div class="community-btns dollor"><i class="fa fa-usd"></i></div>
             <p>Startups Connect with investors</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
