Changes the header of main page - display registration form on left side - replaced mobile to laptop and tablet - display programs language inline and hight the programs using css style - reduce white space of top registration form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,25 @@
 <header>  
   <div class="container">
     <div class="row">
+      <div class="col-md-5">
+        <div class="header_white_space"></div>
+        <section class="email_register text-left">
+          <form action="" class="form-inline">   
+            <label for="">Developer Register now for early access</label>       
+            <div class="form-group">            
+              <input type="text" class="form-control" placeholder="Enter your email address">
+              <button type="submit" class="btn btn-default">Submit</button>
+            </div>
+          </form>
+        </section>
+      </div>
       <div class="col-md-7">
-        <section class="text-right header-element">
+        <section class="text-left header-element">
+          <div class="mobile">
+            <%= image_tag ('showcase.png')%>
+          </div>
           <div class="language">
-            <ul class="text-right list-unstyled">
+            <ul class="text-left list-unstyled">
               <li>C++</li>
               <li>java</li>
               <li>pythan</li>
@@ -19,21 +34,6 @@
               <li>javascript</li>
             </ul>
           </div>
-          <div class="mobile">
-            <%= image_tag ('iphone.png')%>
-          </div>
-        </section>
-      </div>
-      <div class="col-md-5">
-        <div class="header_white_space"></div>
-        <section class="email_register text-left">
-          <form action="" class="form-inline">   
-            <label for="">Developer Register now for early access</label>       
-            <div class="form-group">            
-              <input type="text" class="form-control" placeholder="Enter your email address">
-              <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-          </form>
         </section>
       </div>
     </div>
