--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -23,7 +23,7 @@ a.navbar-brand
   top: 8px
   color: #000
 
-.nav > li > a 
+.nav > li > 
   padding: 10px 15px
   font-size: 14px
 
@@ -31,14 +31,22 @@ a.navbar-brand
   position: relative
   z-index: 2
 .header_white_space
-  height: 150px
+  height: 120px
 .language
   display: inline-block
+  ul >li 
+    display: inline-block
+    margin: 12px 2px 0px
+    background: #0062FF
+    color: #fff
+    padding: 5px 10px
+    border-radius: 3px
+    box-shadow: 0px 3px 0px rgba(5, 68, 150, 0.9)
 .mobile
   display: inline-block
-  width: 200px
+  width: 100%
   img
-    width: 100%
+    width: 80%
 .email_register
   .form-control
     background-color: transparent    
@@ -90,11 +98,8 @@ header
     position: relative
     margin-top: 10px
   .language
-    position: absolute
-    top: 90px
-    right: 230px
-    font-size: 16px
-    color: #000
+    font-size: 14px
+    color: #000    
 
   input[type="text"]::-webkit-input-placeholder 
     color: #fff
